feat(Purchase): update PurchaseServiceTest to use new DTOs and enhance supplier validation